fix: update stream collectors to use toList() for improved readability and more minor fixes