@@ -447,7 +447,7 @@ public class BookingService {
         List<ItemSingle> allItemSingles = itemSingleRepository.findByItem_ItemId(itemId)
             .stream()
             .filter(is -> ItemSingle.STATE_AVAILABLE.equals(is.getState()))
-            .collect(Collectors.toList());
+            .toList();
         
         // Para cada tamanho, contar quantos não têm conflitos
         for (ItemSingle itemSingle : allItemSingles) {
